# slack-profile-sync

./: Dockerfile  Makefile  README.md  pyproject.toml
.circleci/: config.yml
.github/workflows/: codeql.yml
slack_profile_update/: handle_event.py  handle_request.py
slack_profile_update/domain/: slackuser.py  user.py
slack_profile_update/gateway/: abstract_gateway.py  postgress_gateway.py  slack.py  stub_gateway.py  stub_user_link_store.py  stub_user_token_store.py  update_status.py
slack_profile_update/presenter/: api_gateway_request.py  api_gateway_response.py  slack_user_link_model.py
slack_profile_update/usecase/: authorization_grant.py  show_link_user_flow.py  update_all_profiles.py  url_verification.py  user_install.py  user_uninstall.py  verify_request.py
tests/: conftest.py  test_handle_event.py  test_handle_request.py  test_helpers.py
tests/gateway/: test_postgress_gateway.py  test_slack.py  test_stub_user_gateway.py  test_stub_user_link_store.py  test_stub_user_token_store.py  test_update_status.py
tests/gateway/cassettes/test_slack/: test_authorisation_grant_on_success.yaml  test_authorisation_grant_when_code_invalid.yaml  test_can_call_update_status.yaml  (+1 more)
tests/presenter/: test_api_gateway_response.py
tests/resources/: example_interaction_payload.x-url-encoded  example_user_updated_event.json  parsed_shortcut_event.json  user_token_revoked.json
tests/usecase/: test_authorization_grant.py  test_show_user_link_flow.py  test_update_all_profiles.py  test_user_install.py  test_user_uninstall.py  test_verify_request.py
tools/: create_postgres_db.sql  localserver.py
