[tool.poetry]
name = "slack-profile-update"
version = "0.1.0"
description = ""
authors = ["cob16 <public+github@cormacbrady.info>"]

[tool.poetry.dependencies]
python = "^3.7"
black = "^20.8b1"
slack-sdk = "^3.3.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-recording = "^0.11.0"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
