[tool.poetry]
name = "slack-profile-update"
version = "0.1.0"
description = ""
authors = ["cob16 <public+github@cormacbrady.info>"]

[tool.poetry.dependencies]
python = "^3.8.0"
slack-sdk = "^3.18.4"
pg8000 = "^1.29.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
pytest-mock = "^3.5.1"
pytest-recording = "^0.12.1"
black = "^22.8.0"
lambda-packager = "^1.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.lambda-packager]
src_patterns = ["slack_profile_update/**/*.py"]
ignore_folders = ["dist"]
